# cpp-experiments

./: .gitignore  CMakeLists.txt  README.md  cpp-experiments  cpp-experiments_test
include/: shared.hpp  unionfind.hpp
include/memory/: traceable.hpp
include/memory/traceable/: begin.hpp  container.hpp  deref.hpp  end.hpp  for_each.hpp  next.hpp  not_equal.hpp  tag_of.hpp  tuple.hpp
include/shared/: acyclic.hpp  cyclic.hpp
include/shared/cyclic/: iteration.hpp
include/wart/: all.hpp  common_result_of.hpp  copyable_unique_ptr.hpp  enable_if_move_constructible.hpp  for_each.hpp  grammar.hpp  has_result_of.hpp  has_result_type.hpp  make_arg.hpp  make_tag.hpp  math.hpp  result_of.hpp  syntax.hpp  undecayed_common_result_of.hpp  undecayed_common_type.hpp  union.hpp  union_storage.hpp  unique_ptr.hpp  variant.hpp  visitor_result.hpp
include/wart/bdd/: syntax.hpp
include/wart/for_each/: container.hpp  tuple.hpp
include/wart/union/: detail.hpp
include/wart/union/detail/: union.hpp
include/wart/value/: print.hpp  syntax.hpp
include/wart/variant/detail/: all.hpp  elem.hpp  elem_index.hpp  enable_if_elem.hpp  enable_if_move_constructible.hpp  head.hpp  union_storage.hpp  variant.hpp
src/: main.cpp  unionfind.cpp
src/wart/: syntax.cpp
src/wart/value/: syntax.cpp
test/: copyable_unique_ptr_tests.cpp  has_result_type_tests.cpp  union_tests.cpp  variant_tests.cpp
tools/: demangle.cpp
